# webinterface-wifi

./: .gitignore  Cargo.toml  README.MD  README.md  build.rs  install-webint-wf.sh  remove-webint-wf.sh  todo.txt  webinterface-wifi.service
.github/workflows/: build-release.yml
config/: config-specification.toml  config.default.toml
config/examples/: advanced_use.toml  allowlist.toml  blocklist.toml  no_network_filter.toml  static_ip_all_nets.toml
src/: constants.rs  main.rs  net_interface.rs  server.rs  set_port.rs
src/auth/: digest.rs  mod.rs  pass_hash.rs  response.rs  validate_req.rs
src/cmdline/: cli.rs  execute.rs  mod.rs  process.rs
src/config/: extract.rs  factory.rs  mod.rs  parse.rs  structs.rs  validate.rs
src/netinfo/: mod.rs  ssid_cmd.rs  structs.rs  with_config.rs
src/server/: catch_signals.rs  entry.rs  mod.rs  myhttp.rs  myhttps.rs  request.rs  server_loop.rs  ssl.rs  structs.rs  utils.rs
