[package]
name = "webinterface-wifi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.5.1"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
local-ip-address = "0.5.0"
clap = "3.0"
regex = "1.7.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
