[package]
name = "webinterface-wifi"
version = "1.0.2"
edition = "2021"


[dependencies]
hyper-reverse-proxy = "0.5.1"
hyper = "0.14.23"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
local-ip-address = "0.5.0"
clap = "3.0"
regex = "1.7.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
