[package]
name = "webinterface-wifi"
version = "2.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
hyper-reverse-proxy = "0.5.1"
hyper = "0.14.27"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal"] }
local-ip-address = "0.5.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.7.4"
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
pretty_env_logger = "0.5.0"
hyper-rustls = "0.24.2"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
rustls = "0.21.8"
random-string = "1.0"
http = "0.2.10"
sha256 = "1.4.0"
rpassword = "7.3.1"
tokio-util = "0.7.10"
async-recursion = "1.0.5"
colored = "2.0.4"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
